<resources>
    <string name="app_name">Login</string>
    <string name="usuario">Usuario</string>
    <string name="senha">Senha</string>
    <string name="bVindo">Bem Vindo</string>
    <string name="salvar">Salvar</string>
    <string name="voltar">Voltar</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="logar">Entrar</string>
    <string name="cCadastrado">Usuario Cadastrado</string>
    <string name="cVazio">Campo Vazio</string>
    <string name="cSucesso">Cadastrado com Sucesso</string>


</resources>
